--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
     border-radius: 10px;
 }
 
+.entries {
+    background: white;
+    max-width: 80%;
+    margin: 10px auto;
+    border: 3px solid gray;
+    border-radius: 10px;
+    padding: 0 20px;
+}
+
 h1 {
     margin-top: 10px;
     margin-bottom: 40px;
@@ -52,5 +61,4 @@ button {
 
 #save-el {
     font-weight: bold;
-    margin-bottom: 100px;
 }
