--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #EEF6F0;
+  background-color: #F5F5F5;
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: bold;
@@ -81,6 +81,12 @@ h3 {
 }
 
 button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: none;
+  outline: none;
+  background: none;
   position: relative;
   border: 0px solid black;
   font-weight: bold;
@@ -89,11 +95,16 @@ button {
   padding-bottom: 20px;
   width: 200px;
   margin-bottom: 5px;
-  border-radius: 30px; /* Safari */
+  border-radius: 10px; /* Safari */
   transition-duration: 0.4s;
   text-decoration: none;
   overflow: hidden;
   cursor: pointer;
+}
+
+.results {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 #increment-btn {
