--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #EEF6F0;
+    background-color: #F5F5F5;
     background-size: cover;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
@@ -84,6 +84,11 @@ h3 {
 }
 
 button {
+    appearance: none;
+    border: none;
+    outline: none;
+    background: none;
+
     position: relative;
     border: 0px solid black;
     font-weight: bold;
@@ -92,12 +97,17 @@ button {
     padding-bottom: 20px;
     width: 200px;
     margin-bottom: 5px;
-    border-radius: 30px;
+    border-radius: 10px;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     text-decoration: none;
     overflow: hidden;
     cursor: pointer;
+}
+
+.results {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 #increment-btn {
